--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <body>
 	<!-- contenerdor de cajas -->
 	<div class="contenedor">
-		<div class="caja" id="rosa"></div>
+		<div class="caja" id="rosa">
 		<div class="caja" id="azul"></div>
+		</div>
 		<div class="caja" id="verde"></div>
 	</div>
 	<!-- script -->
